# HPC-Assignment

./: .gitignore  CMakeLists.txt  README.md  install.sh  requirements.txt
report/: assignment_report.aux  assignment_report.tex  assignment_report.toc
scripts/: analyze_performance.py  build.sh  run_experiments.sh
src/: cuda_bitonic_sort.cu  cuda_bitonic_sort_stub.cpp  main.cpp  omp_sort.cpp  serial_bitonic_sort.cpp  serial_sort.cpp
src/include/: cuda_bitonic_sort.h  omp_sort.h  serial_bitonic_sort.h  serial_sort.h  utils.h
src/utils/: array_gen.cpp
tests/: sort_correctness_test.cpp
